--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/ad.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/ad.html
@@ -4,26 +4,29 @@
     <meta charset="utf-8" />
     <title>支持</title>
     <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/framework/BitAdmin.css" rel="stylesheet" />
     <style>
         .row {
             margin: 5px;
         }
+
         h4 {
             font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="col-md-6">
+    <div class="container-fluid">
         <div class="row">
-            <h4>准备放个二维码，让大家支持一下。</h4>
-        </div>
-        <div class="row">
-            有你的支持，才是坚持的动力。
+            <div class="col-md-6">
+                <div class="row">
+                    <h4>准备放个二维码，让大家支持一下。</h4>
+                </div>
+                <div class="row">
+                    有你的支持，才是坚持的动力。
+                </div>
+            </div>
         </div>
     </div>
-    <!--cnzz统计代码，可以移除，开始-->
-    <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?67d9c965e616fb773b85f279d372b0c4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();</script>
-    <!--cnzz统计代码，可以移除，结束-->
 </body>
 </html>
