--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -9,7 +9,7 @@
         color: #0094ff;
     }
 </style>
-
+<link href="../../css/framework/BitAdmin.css" rel="stylesheet" />
 <div class="box">
     <div class="box-body" style="padding-left:20px;">
         <h2 style="margin-top:10px;"><span style="font-weight:bold;">BitAdminCore介绍</span></h2>
