--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+    <link href="../../css/framework/BitAdmin.css" rel="stylesheet" />
     <link href="../../css/workflow/workflow.css" rel="stylesheet" />
     <link href="../../css/workflow/flowdesign.css" rel="stylesheet" />
 
@@ -25,7 +26,7 @@
         </div>
     </div>
 
-    <div id="alertModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div id="alertModal" class="modal hide">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h3>消息提示</h3>
@@ -38,7 +39,7 @@
         </div>
     </div>
 
-    <div id="lineModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div id="lineModal" class="modal hide">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h3>迁移条件</h3>
@@ -66,7 +67,7 @@
     </div>
 
     <!-- attributeModal -->
-    <div id="attributeModal" class="modal hide fade">
+    <div id="attributeModal" class="modal hide">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
