--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/bind.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/bind.html
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body class="hold-transition login-page">
+<body>
     <div class="login-box">
         <!-- /.login-logo -->
         <div class="login-box-body">
