--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/work/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/work/account/login.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>微信公众号登录</title>
+    <title>微信企业号登录</title>
     <meta name="description" content="BitAdminCore, Version 1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,16 +20,18 @@
 <body>
     <div class="container">
         <div class="row">
-            <h4>公众号授权模式：</h4>
+            <h4>企业号授权模式：</h4>
             snsapi_base 静默授权只能获取用户openid；<br />
-            snsapi_userinfo 手动授权可通过openid获取基本信息。<br />
-            备注：配置微信菜单可直接指向以下地址即可。
+            snsapi_userinfo 静默授权可通过openid获取基本信息。<br />
+            snsapi_privateinfo：手动授权，可获取成员的详细信息，包含手机、邮箱。<br />
+            备注：配置微信菜单可直接指向以下地址即可。<br />
+            企业微信页面在微信中打开只能取到OpenId，在企业微信中打开只能取到UserId。
         </div>
         <div class="row">
-            <a href="/weixinmp/authorize_base?state=menu1" class="btn btn-success">公众号静默授权</a>
+            <a href="/weixinwork/authorize_user?state=menu1" class="btn btn-success">企业号静默授权</a>
         </div>
         <div class="row">
-            <a href="/weixinmp/authorize_user?state=menu2&scope=snsapi_userinfo" class="btn btn-success">公众号手动授权</a>
+            <a href="/weixinwork/authorize_private?state=menu2" class="btn btn-success">企业号手动授权</a>
         </div>
     </div>
 </body>
