--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/index.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/index.html
@@ -49,6 +49,33 @@
         .nav-tabs > li {
             float: none;
         }
+
+        #menu {
+            z-index: 999999;
+            width: 125px;
+            overflow: hidden;
+            box-shadow: none;
+            border: 1px solid #098cb7;
+            position: absolute;
+            background-color: #098cb7;
+            border-radius: 5px;
+        }
+
+        .menu {
+            border: 0;
+            width: 130px;
+            margin: 0;
+            background-color: transparent;
+            line-height: 30px;
+            padding: 0 10px;
+            text-align: left;
+            color: #ffffff;
+        }
+
+            .menu:hover {
+                background-color: rgba(12,23,45,0.9);
+                color: #ffffff;
+            }
     </style>
 </head>
 <body class="hold-transition skin-blue fixed sidebar-mini">
@@ -72,19 +99,19 @@
                                 <span class="hidden-xs userName"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="user-header" style="height:145px;">
-                                    <img src="../../images/home/user.jpg" class="img-circle">
+                                <li class="user-header" style="height:145px;text-align:left;">
+                                    <img src="../../images/home/user.jpg" class="img-circle userImage">
                                     <p><span class="userName"></span></p>
+                                    <div style="float:right;margin-top:-130px;width:160px;">
+                                        <p style="margin-bottom:0.5rem;color:white;"><span class="departmentName"></span></p>
+                                        <p style="margin-bottom:0.5rem;color:white;"><span class="mobile"></span></p>
+                                        <p style="margin-bottom:0.5rem;color:white;"><span class="email"></span></p>
+                                    </div>
                                 </li>
-                                <li class="user-body">
-                                    <div class="text-right"><small class="departmentName"></small></div>
-                                    <div class="text-right"><small class="mobile"></small></div>
-                                    <div class="text-right"><small class="email"></small></div>
-                                </li>
-                                <li class="user-footer">
-                                    <div class="btn-group" style="float:right;">
-                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#PasswordModal">修改密码</button>
-                                        <button type="button" class="btn btn-primary signout">退出登录</button>
+                                <li class="user-footer" style="padding:1px 0px 0px 0px;">
+                                    <div class="btn-group">
+                                        <button type="button" style="width:140px;" class="btn btn-primary" data-toggle="modal" data-target="#PasswordModal">修改密码</button>
+                                        <button type="button" style="width:140px;" class="btn btn-primary signout">退出登录</button>
                                     </div>
                                 </li>
                             </ul>
@@ -104,10 +131,10 @@
             <section class="content">
                 <div class="tab-title" style="position: relative; border-bottom: 1px solid #ddd; padding:0px 5px;">
                     <div>
-                        <a href="javascript:void(0);"><i class="fas fa-angle-left" style="float:left;margin-top:7px;"></i></a>
-                        <a href="javascript:void(0);"><i class="fas fa-angle-right" style="float:right;margin-top:7px;"></i></a>
+                        <a href="javascript:void(0);"><i id="Up" class="fas fa-angle-left" style="float:left;margin-top:7px;"></i></a>
+                        <a href="javascript:void(0);"><i id="Down" class="fas fa-angle-right" style="float:right;margin-top:7px;"></i></a>
                     </div>
-                    <ul class="nav nav-tabs" id="page-tabs" style="border-bottom: none; position: relative; white-space: nowrap; overflow: hidden;">
+                    <ul class="nav nav-tabs" id="page-tabs" style="border-bottom: none; position: relative; white-space: nowrap; overflow: hidden;flex-wrap:nowrap;">
                         <li class="nav-item"><a class="nav-link active" href="#home" data-toggle="tab" aria-expanded="false">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="#notice" data-toggle="tab" aria-expanded="false">示例</a></li>
                         <li class="nav-item"><a class="nav-link" href="#learn" data-toggle="tab" aria-expanded="false">教程</a></li>
@@ -132,8 +159,8 @@
             </section>
         </div>
         <!--<div class="content-wrapper" style="background-color:white;" mode="iframe">
-        <iframe id="iframe_page_home" style="width: 100%;" src="Readme.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
-        </div>-->
+    <iframe id="iframe_page_home" style="width: 100%;" src="Readme.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
+    </div>-->
         <footer class="main-footer" style="padding: 5px;">
             <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?67d9c965e616fb773b85f279d372b0c4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();</script>
             <strong>Copyright &copy; 2017-2018 <a href="javascript:void();">bitdao</a>.</strong> All rights reserved.
@@ -185,6 +212,12 @@
                 </div><!-- /.modal-content -->
             </div><!-- /.modal -->
         </div>
+        <div id="menu" style="display:none;">
+            <button type="button" class="btn btn-default menu refresh">刷新</button>
+            <button type="button" class="btn btn-default menu closeOne">关闭</button>
+            <button type="button" class="btn btn-default menu closeOther">关闭其他</button>
+            <button type="button" class="btn btn-default menu closeAll">关闭全部</button>
+        </div>
     </div>
     <!-- ./wrapper -->
     <!--基础引用-->
@@ -213,6 +246,55 @@
                 BitAdmin.setTabsWidth();
                 BitAdmin.setMentHeight();
                 $("[mode=" + BitAdmin.mode + "] iframe").height(BitAdmin.getIframeHeight());
+            });
+
+            //右键菜单关闭
+            window.onclick = function (e) {
+                $('#menu').hide();
+            }
+            //刷新
+            $("#menu > .refresh").click(function () {
+                var id = $("#menu").attr("data-id");
+                BitAdmin.refreshTab('iframe_' + id);
+            });
+            //关闭
+            $("#menu > .closeOne").click(function () {
+                var id = $("#menu").attr("data-id");
+                var li_id = "tab_li_" + id;
+                //如果关闭tab是当前选中的tab，则激活前一个tab
+                if ($("li a.active").parent().attr('id') == li_id) {
+                    $("li a.active").parent().prev().find("a").click();
+                }
+                $("#" + li_id).remove();
+                $("#tab_content_" + id).remove();
+            });
+
+            //关闭全部
+            $("#menu > .closeAll").click(function () {
+                $(".tab-title ul li").each(function (i, d) {
+                    var id = d.id.replace("tab_li_", "");
+                    if (d.id != "") {
+                        $("#" + d.id).remove();
+                        $("#tab_content_" + id).remove();
+                    }
+                });
+                $(".tab-title ul li").find("a").click();
+            });
+
+            //关闭其她
+            $("#menu > .closeOther").click(function () {
+                var id = $("#menu").attr("data-id");
+                $(".tab-title ul li").each(function (i, d) {
+                    if (d.id != "") {
+                        var ids = d.id.replace("tab_li_", "");
+                        if (id != ids) {
+                            var ids = d.id.replace("tab_li_", "");
+                            $("#" + d.id).remove();
+                            $("#tab_content_" + ids).remove();
+                        }
+                    }
+                });
+                $("#tab_li_" + id).find("a").click();
             });
 
             $('#Down').bind('click', function () {
@@ -288,7 +370,8 @@
         });
 
         var BitNotice = function () {
-            var uri = "ws://" + window.location.host + "/websocket/notice";
+            var protocol = document.location.protocol == "https:" ? "wss" : "ws";
+            var uri = protocol + "://" + window.location.host + "/websocket/notice";
             var socket = new WebSocket(uri);
             socket.onopen = function (e) { write("opened " + uri); send("open"); };
             socket.onclose = function (e) { write("closed"); };
