--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>教程</title>
     <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/framework/BitAdmin.css" rel="stylesheet" />
 
     <style>
         .row {
@@ -16,63 +17,20 @@
     </style>
 </head>
 <body>
-    <div class="col-md-6">
+    <div class="container-fluid">
         <div class="row">
-            <h4>BitAdminCore框架应用教程</h4>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9023862.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（一）使用Cookiecutter创建应用项目</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9061013.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（二）创建一个简单的增删改查模块</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9077992.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（三）核心套件querySuite入门介绍</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9098902.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（四）核心套件querySuite按钮功能</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9105986.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（五）核心套件querySuite列的定义</a>
+            <div class="col-md-6">
+                <h4>BitAdminCore框架应用教程</h4>
+                <dl>
+                    <dd><a href="http://www.cnblogs.com/chenyinxin/p/9023862.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（一）使用Cookiecutter创建应用项目</a></dd>
+                    <dd><a href="http://www.cnblogs.com/chenyinxin/p/9061013.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（二）创建一个简单的增删改查模块</a></dd>
+                    <dd><a href="http://www.cnblogs.com/chenyinxin/p/9077992.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（三）核心套件querySuite入门介绍</a></dd>
+                    <dd><a href="http://www.cnblogs.com/chenyinxin/p/9098902.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（四）核心套件querySuite按钮功能</a></dd>
+                    <dd><a href="http://www.cnblogs.com/chenyinxin/p/9105986.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（五）核心套件querySuite列的定义</a></dd>
+                </dl>
+            </div>
+            <div class="col-md-6"></div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="row">
-            <h4>BitAdminCore更新日志</h4>
-        </div>
-        <div class="row">
-            <a href="https://www.cnblogs.com/chenyinxin/p/9492628.html" class="btn-link" target="_blank">更新日志20180817</a>
-        </div>
-        <div class="row">
-            <a href="https://www.cnblogs.com/chenyinxin/p/9139501.html" class="btn-link" target="_blank">更新日志20180605</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9117047.html" class="btn-link" target="_blank">更新日志20180531</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9107054.html" class="btn-link" target="_blank">更新日志20180529</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9087139.html" class="btn-link" target="_blank">更新日志20180524</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9077232.html" class="btn-link" target="_blank">更新日志20180523</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9073542.html" class="btn-link" target="_blank">更新日志20180522</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9060576.html" class="btn-link" target="_blank">更新日志20180519</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9056345.html" class="btn-link" target="_blank">更新日志20180518</a>
-        </div>
-        <div class="row">
-            <a href="http://www.cnblogs.com/chenyinxin/p/9049654.html" class="btn-link" target="_blank">更新日志20180516</a>
-        </div>
-    </div>
-    <!--cnzz统计代码，可以移除，开始-->
-    <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?67d9c965e616fb773b85f279d372b0c4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();</script>
-    <!--cnzz统计代码，可以移除，结束-->
 </body>
 </html>
